# Laucher

./: .gitignore  GAME_UPDATE_GUIDE.md  ONLINE_MANAGEMENT_GUIDE.md  README.md  index.html  manifest.json  package-lock.json  package.json
AntChillGame/Brato.io.v0.0.1/Broto_Data/: RuntimeInitializeOnLoads.json  ScriptingAssemblies.json  app.info  boot.config  globalgamemanagers  level0  resources.assets  sharedassets0.assets
AntChillGame/brato.io.v0.01/broto.v001/Broto_BurstDebugInformation_DoNotShip/Data/Plugins/x86_64/: lib_burst_generated.txt
AntChillGame/brato.io.v0.01/broto.v001/Broto_Data/: boot.config  globalgamemanagers  globalgamemanagers.assets  sharedassets0.assets  sharedassets0.resource
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/hooks/: useLanguage.ts
src/locales/: en.json  vi.json
